updated package.json npm isntalls

--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "SMall NVD recent vulnerability checker",
   "main": "index.js",
   "dependencies": {
+    "child-process-promise": "^2.2.1",
+    "request": "^2.83.0",
     "request-promise": "^4.2.2",
-    "request": "^2.83.0"
+    "unzipper": "^0.8.9"
   },
   "devDependencies": {},
   "scripts": {
