switched  to extract-zip, updated package.json typo. edited config to use 2017 data as opposed to recent to ensure all data fields are filled. FIxed a curl error where the zip was being appended to over and over. Causing corruption

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "nvdnotifier",
   "version": "1.0.0",
-  "description": "SMall NVD recent vulnerability checker",
+  "description": "Small NVD recent vulnerability checker",
   "main": "index.js",
   "dependencies": {
     "child-process-promise": "^2.2.1",
+    "extract-zip": "^1.6.5",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
     "unzipper": "^0.8.9"
