cleaned up code, removed unused packages, reduced a few .then(()) sequences

--- a/package.json
+++ b/package.json
@@ -5,10 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "child-process-promise": "^2.2.1",
-    "extract-zip": "^1.6.5",
-    "request": "^2.83.0",
-    "request-promise": "^4.2.2",
-    "unzipper": "^0.8.9"
+    "extract-zip": "^1.6.5"
   },
   "devDependencies": {},
   "scripts": {
