--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "child-process-promise": "^2.2.1",
-    "extract-zip": "^1.6.5"
+    "extract-zip": "^1.6.5",
+    "pdfkit": "^0.8.3"
   },
   "devDependencies": {},
   "scripts": {
