--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nvdnotifier",
   "version": "1.0.0",
-  "description": "Small NVD recent vulnerability checker",
+  "description": "Check the NVD for vulnerabilites based on a provided checklist file and output results to text or PDF",
   "main": "index.js",
   "dependencies": {
     "child-process-promise": "^2.2.1",
