--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "child-process-promise": "^2.2.1",
     "extract-zip": "^1.6.5",
+    "minimist": "^1.2.0",
     "pdfkit": "^0.8.3"
   },
   "devDependencies": {},
